# auto-optimizer

./: .dockerignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_QA_DELIVERABLES.md  INTEGRATION_QA_SUMMARY.txt  README.md  jest.config.js  package.json  tsconfig.json
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: ci.yml  publish-npm.yml  release.yml
crates/actuator/: Cargo.toml
crates/analyzer/: Cargo.toml
crates/api/: Cargo.toml
crates/api-grpc/: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  SUMMARY.md  build.rs
crates/api-grpc/examples/: grpc_client.rs  streaming_demo.rs
crates/api-grpc/proto/: admin.proto  common.proto  config.proto  health.proto  integrations.proto  metrics.proto  optimization.proto
crates/api-grpc/src/: auth.rs  error.rs  lib.rs  server.rs
crates/api-grpc/src/interceptors/: auth.rs  logging.rs  mod.rs  ratelimit.rs
crates/api-grpc/src/services/: admin.rs  config.rs  health.rs  integrations.rs  metrics.rs  mod.rs  optimization.rs
crates/api-grpc/src/streaming/: mod.rs  optimization.rs
crates/api-grpc/tests/: integration_test.rs
crates/api-rest/: .env.example  Cargo.toml  IMPLEMENTATION_SUMMARY.md  OPENAPI_SPEC.md  README.md
crates/api-rest/examples/: generate_openapi.rs  start_server.rs
crates/api-rest/src/: error.rs  lib.rs  openapi.rs  server.rs
crates/api-rest/tests/: auth_tests.rs  integration_tests.rs  middleware_tests.rs
crates/api-tests/: Cargo.toml  IMPLEMENTATION_COMPLETE.md  README.md  TEST_REPORT.md  build.rs
crates/api-tests/benches/: latency_bench.rs  load_test.rs  streaming_bench.rs
crates/api-tests/proto/: optimizer.proto
crates/api-tests/scripts/: load_test.sh  run_all_tests.sh  security_scan.sh
crates/api-tests/src/: common.rs  fixtures.rs  helpers.rs  lib.rs
crates/api-tests/tests/gateway/: composition.rs  mod.rs  routing.rs  security.rs  translation.rs
crates/api-tests/tests/grpc_api/: interceptors.rs  mod.rs  performance.rs  services.rs  streaming.rs
crates/api-tests/tests/integration/: e2e.rs  mod.rs
crates/api-tests/tests/rest_api/: auth.rs  endpoints.rs  mod.rs  performance.rs  ratelimit.rs  validation.rs
crates/api-tests/tests/security/: auth_security.rs  mod.rs  owasp_api_top10.rs  penetration.rs
crates/cli/: Cargo.toml  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md
crates/cli/src/: interactive.rs  lib.rs  main.rs
crates/cli/src/client/: mod.rs  rest.rs
crates/cli/src/commands/: admin.rs  config.rs  integration.rs  metrics.rs  mod.rs  optimize.rs  service.rs  util.rs
crates/cli/src/output/: json.rs  mod.rs  table.rs  yaml.rs
crates/collector/: Cargo.toml
crates/config/: Cargo.toml
crates/decision/: Cargo.toml
crates/integrations/: Cargo.toml  DELIVERABLES.md  IMPLEMENTATION_SUMMARY.md  README.md
crates/integrations/src/: lib.rs
crates/integrations/tests/: anthropic_tests.rs  jira_tests.rs
crates/llm-optimizer/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  config.toml.example
crates/llm-optimizer/src/: health.rs  lib.rs  main.rs  metrics.rs  signals.rs
crates/llm-optimizer/src/config/: defaults.rs  mod.rs  validation.rs
crates/llm-optimizer/src/service/: collector.rs  grpc_api.rs  integrations.rs  mod.rs  processor.rs  rest_api.rs  storage.rs
crates/processor/: Cargo.toml
crates/storage/: Cargo.toml
crates/types/: Cargo.toml
deployment/: DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  Makefile  README.md
deployment/docker/: Dockerfile.cli  Dockerfile.service  docker-compose.prod.yml  docker-compose.yml  init-db.sh
deployment/helm/: Chart.yaml  values.yaml
deployment/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deployment/monitoring/: alert-rules.yml  grafana-dashboard.json  prometheus.yml
deployment/scripts/: backup.sh  build.sh  health-check.sh  migrate.sh  release.sh  restore.sh
deployment/systemd/: install.sh  llm-optimizer.env.example  llm-optimizer.service  uninstall.sh
docs/: CLI_DELIVERABLES.md  PUBLISHING.md  PUBLISHING_SETUP_COMPLETE.md  QUICKSTART.md  TESTING_INDEX.md  TEST_COVERAGE_REPORT.md  TEST_DOCUMENTATION.md  WEBHOOKS_AND_QA_DELIVERABLES.md  api-reference.md  configuration-reference.md  troubleshooting.md  user-guide.md
npm/: build-platform-packages.js  install.js  package.json
scripts/: README.md  prepare-crates-publish.sh  publish-crates.sh  publish-npm.sh  test-all.sh  test-deployment.sh  test-e2e.sh  test-integration.sh  verify-publishing-setup.sh
src/integrations/anthropic/: anthropic-client.ts
src/integrations/github/: .eslintrc.json  COORDINATOR_REPORT.md  FILE_MANIFEST.txt  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  github-auth.ts  github-client.ts  github-types.ts  github-webhooks.ts  index.ts  package.json  tsconfig.json  verify-implementation.sh
src/integrations/jira/: index.ts  jira-client.ts
src/integrations/llm-devops/: config-manager-adapter.ts  cost-ops-adapter.ts  index.ts  latency-lens-adapter.ts  observatory-adapter.ts  router-l2-adapter.ts  sentinel-adapter.ts  shield-adapter.ts
src/integrations/slack/: IMPLEMENTATION_SUMMARY.md  README.md  example.ts  index.ts  llm-optimizer-integration.ts  slack-auth.ts  slack-client.ts  slack-commands.ts  slack-types.ts  slack-webhooks.ts  tsconfig.json
src/integrations/webhooks/: README.md  index.ts  webhook-client.ts  webhook-queue.ts  webhook-retry.ts  (+2 more)
tests/: setup.ts
tests/cli/: command_test.rs  mod.rs
tests/e2e/: mod.rs  optimization_workflow_test.rs
tests/integration/: component_coordination_test.rs  configuration_test.rs  error-handling.test.ts  integration.test.ts  mod.rs  performance.test.ts  recovery_test.rs  security.test.ts  service_lifecycle_test.rs  signal_handling_test.rs
(+37 files in other folders)
